# vinny

./: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  flake.nix  justfile  pyproject.toml  results.html
patches/: MV-Adapter__Fix_import_and_enable_debug.patch
vinny/: bg.py  cuda.py  grid.py  main.py  mesh.py  shape.py  video.py  vinny.py
