[project]
name = "vinny"
version = "0.1.0"
description = ""
authors = [
    {name = "Tiziano Perrucci",email = "tiziano.perrucci@gmail.com"}
]
readme = "README.md"
requires-python = "~=3.12.3"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu129"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "torch_cuda"}
torchvision = {source = "torch_cuda"}
