[project]
name = "vinny"
version = "0.1.0"
description = ""
authors = [
    {name = "Tiziano Perrucci",email = "tiziano.perrucci@gmail.com"}
]
readme = "README.md"
requires-python = "~=3.12.3"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "trimesh (>=4.7.4,<5.0.0)",
    "diffusers (>=0.34.0,<0.35.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "transformers (>=4.55.2,<5.0.0)",
    "pymeshlab (>=2023.12.post3,<2024.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu129"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "torch_cuda"}
torchvision = {source = "torch_cuda"}
