[project]
name = "vinny"
version = "0.1.0"
description = ""
authors = [
    {name = "Tiziano Perrucci",email = "tiziano.perrucci@gmail.com"}
]
readme = "README.md"
requires-python = "~=3.12.3"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "trimesh (>=4.7.4,<5.0.0)",
    "diffusers (>=0.34.0,<0.35.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "transformers (>=4.55.2,<5.0.0)",
    "pymeshlab (>=2023.12.post3,<2024.0)",
    "kornia (>=0.8.1,<0.9.0)",
    "timm (>=1.0.19,<2.0.0)",
    "spandrel (>=0.4.1,<0.5.0)",
    "accelerate (>=1.10.0,<2.0.0)",
    "gltflib (>=1.0.13,<2.0.0)",
    "ninja (>=1.13.0,<2.0.0)",
    "nvdiffrast @ git+https://github.com/NVlabs/nvdiffrast.git",
    "matplotlib (>=3.10.5,<4.0.0)",
    "jaxtyping (>=0.3.2,<0.4.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "open3d (>=0.19.0,<0.20.0)",
    "cvcuda-cu12 (>=0.15.0,<0.16.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu129"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "torch_cuda"}
torchvision = {source = "torch_cuda"}
